--- a/res/values/custom_colors.xml
+++ b/res/values/custom_colors.xml
@@ -30,4 +30,9 @@
     <color name="accent_picker_white_accent">@android:color/white</color>
     <color name="accent_picker_dark_accent">@android:color/black</color>
 
+    <!-- DU Tweaks -->
+    <color name="BottomBarBackgroundColor">@*android:color/primary_device_default_dark</color>
+    <color name="bottom_nav_text_icon_active">@android:color/white</color>
+    <color name="bottom_nav_text_icon_inactive">@*android:color/hint_foreground_light</color>
+
 </resources>
